--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -1,9 +1,8 @@
-/* stylelint-disable-next-line */
-@tailwind base;
-/* stylelint-disable-next-line */
-@tailwind components;
-/* stylelint-disable-next-line */
-@tailwind utilities;
+/* stylelint-disable */
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
+/* stylelint-enable */
 
 @layer base {
     :root {
