--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -82,3 +82,128 @@
 .text-balance {
     text-wrap: balance;
 }
+
+/* Theme toggle animations */
+@keyframes ripple {
+    0% {
+        width: 0;
+        height: 0;
+        opacity: 0.5;
+    }
+    100% {
+        width: 500px;
+        height: 500px;
+        opacity: 0;
+    }
+}
+
+@keyframes ripple-blur {
+    0% {
+        width: 0;
+        height: 0;
+        opacity: 0.5;
+        filter: blur(0);
+    }
+    100% {
+        width: 500px;
+        height: 500px;
+        opacity: 0;
+        filter: blur(40px);
+    }
+}
+
+@keyframes polygon-morph {
+    0% {
+        clip-path: polygon(50% 0%, 0% 0%, 0% 0%);
+        width: 0;
+        height: 0;
+        opacity: 0.5;
+    }
+    25% {
+        clip-path: polygon(50% 0%, 0% 100%, 0% 0%);
+        width: 500px;
+        height: 500px;
+        opacity: 0.5;
+    }
+    50% {
+        clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
+        width: 500px;
+        height: 500px;
+        opacity: 0.5;
+    }
+    75% {
+        clip-path: polygon(50% 0%, 0% 100%, 100% 100%, 100% 0%);
+        width: 500px;
+        height: 500px;
+        opacity: 0.5;
+    }
+    100% {
+        clip-path: polygon(50% 0%, 0% 100%, 100% 100%, 100% 0%);
+        width: 500px;
+        height: 500px;
+        opacity: 0;
+    }
+}
+
+.animate-ripple {
+    animation: ripple 1s ease-out forwards;
+}
+
+.animate-ripple-blur {
+    animation: ripple-blur 1s ease-out forwards;
+}
+
+.animate-polygon-morph {
+    animation: polygon-morph 1s ease-out forwards;
+}
+
+
+/* view transition api */
+.page-transition {
+    opacity: 0;
+    transition: opacity 0.7s ease;
+  }
+  
+  .page-transition.active {
+    opacity: 1;
+  }
+  
+  @supports (view-transition-name: none) {
+    .page-transition {
+      transition: none;
+    }
+  
+    ::view-transition-group(root) {
+      animation-duration: 0.7s;
+      animation-timing-function: linear(
+        0 0%, 0.2342 12.49%, 0.4374 24.99%,
+        0.6093 37.49%, 0.6835 43.74%,
+        0.7499 49.99%, 0.8086 56.25%,
+        0.8593 62.5%, 0.9023 68.75%, 0.9375 75%,
+        0.9648 81.25%, 0.9844 87.5%,
+        0.9961 93.75%, 1 100%
+      );
+    }
+  
+    ::view-transition-new(root) {
+      mask: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40 40"><defs><filter id="blur"><feGaussianBlur stdDeviation="2"/></filter></defs><circle cx="0" cy="0" r="18" fill="white" filter="url(%23blur)"/></svg>') top left / 0 no-repeat;
+      mask-origin: content-box;
+      animation: scale 1s;
+      transform-origin: top left;
+    }
+  
+    ::view-transition-old(root),
+    .dark::view-transition-old(root) {
+      animation: scale 1s;
+      transform-origin: top left;
+      z-index: -1;
+    }
+  
+    @keyframes scale {
+      to {
+        mask-size: 350vmax;
+      }
+    }
+  }
+  
+  
